k8s/overlays/production/image-pull-policy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beast-apiserver
  namespace: beast
spec:
  template:
    spec:
      containers:
        - name: apiserver
          imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beast-encoder
  namespace: beast
spec:
  template:
    spec:
      containers:
        - name: encoder
          imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beast-frontend
  namespace: beast
spec:
  template:
    spec:
      containers:
        - name: frontend
          imagePullPolicy: Always
