k8s/overlays/production/recreate-strategy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beast-apiserver
  namespace: beast
spec:
  strategy:
    $patch: replace
    type: Recreate
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beast-encoder
  namespace: beast
spec:
  strategy:
    $patch: replace
    type: Recreate
